// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`radio snapshots Radio: 0 1`] = `
<div
  className="radio"
>
  <input
    checked={true}
    className="radio_input"
    disabled={null}
    id={undefined}
    onChange={[Function]}
    type="radio"
  />
  <span
    className="radio_stateIndicator"
  />
</div>
`;

exports[`radio snapshots Radio: 1 1`] = `
<div
  className="radio radio__disabled"
>
  <input
    checked={false}
    className="radio_input"
    disabled={true}
    id={undefined}
    onChange={[Function]}
    type="radio"
  />
  <span
    className="radio_stateIndicator"
  />
</div>
`;
